--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 
 :root{
     --primary-color-casa-principal: #829660;
-    --secondary-color: #6c757d;
+    --secondary-color-letter: #f8f9fa;
     --success-color: #28a745;
     --info-color: #17a2b8;
     --warning-color: #ffc107;
@@ -41,3 +41,45 @@ area{
     cursor: pointer;
 }
 
+.popup-container{
+    position: absolute;
+    width: auto;
+    height: auto;
+    opacity: 1;
+    top: 45%;
+    left: 70%;
+    transform: translate(-50%, -50%);
+    transition: all 0.5s ease;
+}
+
+
+#objetivos{
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
+
+#area1-objetivos{
+    position: relative; /* Añadir posicionamiento relativo */
+    font-size: 12px;
+    color: var(--secondary-color-letter);
+    background-color: var(--primary-color-casa-principal);
+    padding: 1rem;
+    border-radius: 1rem;
+}
+
+#area1-objetivos span {
+    position: absolute;
+    top: 0;
+    right: 0;
+    color: var(--secondary-color-letter);
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.5s ease;
+    padding: 10px 10px 0px 0px;
+}
+
+#area1-objetivos span:hover{
+    color: var(--danger-color);
+}
